--- a/content.html
+++ b/content.html
@@ -45,11 +45,15 @@
       <div class="ff_content">
         <div class="person">
           <div class="by">
+           
             <img src="images/avatar.jpg" alt="" />
             <div class="name">
+              <a href="profile.html">
               <h4>By: <span>Makinde Sodiq</span></h4>
               <i>2 mins ago</i>
+              </a>
             </div>
+            
           </div>
 
           <div class="title">
@@ -106,11 +110,13 @@
         </div>
       </div>
       <aside>
+        <a href="">
        <div class="profile">
          <img src="images/avatar.jpg" alt="">
          <h2>Makinde Sodiq</h2>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus qui repellat delectus illum architecto optio libero, possimus, repudiandae natus ullam alias, laudantium ab. Ut voluptate nam quam, nemo facilis quasi.</p>
        </div>
+       </a>
        <hr>
 
        <div class="related">
