--- a/content.html
+++ b/content.html
@@ -45,7 +45,7 @@
       <div class="ff_content">
         <div class="person">
           <div class="by">
-           
+            <a href="profile.html">
             <img src="images/avatar.jpg" alt="" />
             <div class="name">
               <a href="profile.html">
