--- a/forms/log.html
+++ b/forms/log.html
@@ -8,9 +8,9 @@
       content="This website showcase 4 must-read blog every week"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send Mail to:</title>
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./assets/content.css" />
+    <title>Log In</title>
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../assets/content.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,13 +44,21 @@
     <main class="container">
       <div class="inmail">
         <form action="">
-          <h3>Send Blog to:</h3>
+          <h3>Log In</h3>
           <div class="password_parent">
-            <input type="text" class="password" placeholder="Email" />
-            <label for="password">Email</label>
+            <input
+              type="text"
+              class="password"
+              placeholder="Username or email"
+            />
+            <label for="password">Username or email</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Password" />
+            <label for="password">Password</label>
           </div>
 
-          <button type="submit">Send</button>
+          <button type="submit">Log-in</button>
         </form>
       </div>
     </main>
