--- a/forms/sign.html
+++ b/forms/sign.html
@@ -8,9 +8,9 @@
       content="This website showcase 4 must-read blog every week"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send Mail to:</title>
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./assets/content.css" />
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../assets/content.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,13 +44,45 @@
     <main class="container">
       <div class="inmail">
         <form action="">
-          <h3>Send Blog to:</h3>
+          <h3>Sign Up</h3>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="First Name" />
+            <label for="password">First Name</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Last Name" />
+            <label for="password">Last Name</label>
+          </div>
           <div class="password_parent">
             <input type="text" class="password" placeholder="Email" />
             <label for="password">Email</label>
           </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
+          <div class="password_parent">
+            <input type="text" class="password" placeholder="Stack" />
+            <label for="password">Stack</label>
+          </div>
 
-          <button type="submit">Send</button>
+          <button type="submit">Sign-in</button>
         </form>
       </div>
     </main>
