--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
       <div class="container navbar">
         <h1>Guardians</h1>
 
-        <!-- <ul class="navlinks">
-          <li>Product</li>
-          <li>All</li>
-          <li>Contact</li>
-          <li>About</li>
-          <li>Services</li>
-        </ul> -->
+        <ul class="navlinks">
+          <li><a href="profile.html">Profile</a></li>
+        </ul>
 
-        <button class="away">Add Post</button>
+        <button class="away"><a href="./forms/sign.html">Sign Up</a></button>
+        <button class="away"><a href="./forms/log.html">Sign In</a></button>
 
         <div class="hamburger">
           <div class="line1"></div>
@@ -68,9 +65,9 @@
         <img src="images/blog1.jpg" class="main_pic" />
 
         <div class="component1">
-          <a href="content.html"
-            ><label for="">Newest</label>
-            <h3>How to contribute to an open source project</h3>
+          <a href="content.html">
+            <label for="">Newest</label>
+            <h3>How to contribute to an open s ource project</h3>
             <p>
               natus odit cum. Soluta quos voluptates, eos vel quod culpa tempora
               inventore accusantium consectetur vero nam, et doloribus
