--- a/email.html
+++ b/email.html
@@ -60,8 +60,10 @@
         <div class="foot">
           <h3>Would you like to join our Newsletter</h3>
           <div class="new_mail">
-            <input type="text" placeholder="Email Address" />
-            <button>Join</button>
+            <form action="">
+              <input type="text" placeholder="Email Address" />
+              <button type="submit">Join</button>
+            </form>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
