--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           </p>
 
           <div class="search_field">
-            <input type="text" placeholder="search blog" />
-            <button>Get</button>
+            <form action="">
+              <input type="text" placeholder="search blog" />
+              <button type="submit">Get</button>
+            </form>
           </div>
         </div>
       </div>
@@ -75,11 +77,13 @@
             </p>
 
             <div class="by">
-              <img src="images/avatar.jpg" alt="" />
-              <div class="name">
-                <h4>By: <span>Makinde Sodiq</span></h4>
-                <i>2 mins ago</i>
-              </div>
+              <a href="profile.html">
+                <img src="images/avatar.jpg" alt="" />
+                <div class="name">
+                  <h4>By: <span>Makinde Sodiq</span></h4>
+                  <i>2 mins ago</i>
+                </div>
+              </a>
             </div>
           </a>
         </div>
@@ -106,11 +110,13 @@
             </p>
 
             <div class="by">
-              <img src="images/avatar.jpg" alt="" />
-              <div class="name">
-                <h4>By: <span>Makinde Sodiq</span></h4>
-                <i>1 week ago</i>
-              </div>
+              <a href="profile.html">
+                <img src="images/avatar.jpg" alt="" />
+                <div class="name">
+                  <h4>By: <span>Makinde Sodiq</span></h4>
+                  <i>1 week ago</i>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -133,11 +139,13 @@
             </p>
 
             <div class="by">
-              <img src="images/avatar.jpg" alt="" />
-              <div class="name">
-                <h4>By: <span>Makinde Sodiq</span></h4>
-                <i>4 weeks ago</i>
-              </div>
+              <a href="profile.html">
+                <img src="images/avatar.jpg" alt="" />
+                <div class="name">
+                  <h4>By: <span>Makinde Sodiq</span></h4>
+                  <i>1 week ago</i>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -160,11 +168,13 @@
             </p>
 
             <div class="by">
-              <img src="images/avatar.jpg" alt="" />
-              <div class="name">
-                <h4>By: <span>Makinde Sodiq</span></h4>
-                <i>2 months ago</i>
-              </div>
+              <a href="profile.html">
+                <img src="images/avatar.jpg" alt="" />
+                <div class="name">
+                  <h4>By: <span>Makinde Sodiq</span></h4>
+                  <i>1 week ago</i>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -177,8 +187,10 @@
         <div class="foot">
           <h3>Would you like to join our Newsletter</h3>
           <div class="new_mail">
-            <input type="text" placeholder="Email Address" />
-            <button>Join</button>
+            <form action="">
+              <input type="text" placeholder="Email Address" />
+              <button type="submit">Join</button>
+            </form>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
