--- a/content.html
+++ b/content.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="container navbar">
-        <h1>Guardians</h1>
+         <h1><a href="index.html">Guardians</a></h1>
 
         <!-- <ul class="navlinks">
           <li>Home</li>
@@ -31,7 +31,9 @@
         
         </ul> -->
 
-        <button class="away">Add Post</button>
+        <button class="away">
+          <a href="index.html"> Log Out </a>
+        </button>
 
         <div class="hamburger">
           <div class="line1"></div>
@@ -84,7 +86,9 @@
               <img src="svg/comment-svgrepo-com.svg" onclick="commentbox()">
               </div>
               <div class="width_c">
+                <a href="email.html">
               <img src="svg/share-svgrepo-com.svg" alt="">
+              </a>
               </div>
             </div>
 
@@ -110,7 +114,7 @@
         </div>
       </div>
       <aside>
-        <a href="">
+        <a href="profile.html">
        <div class="profile">
          <img src="images/avatar.jpg" alt="">
          <h2>Makinde Sodiq</h2>
