--- a/forms/sign.html
+++ b/forms/sign.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="container navbar">
-        <h1>Guardians</h1>
+        <h1><a href="">Guardians</a></h1>
 
         <!-- <ul class="navlinks">
           <li>Home</li>
@@ -31,7 +31,9 @@
         
         </ul> -->
 
-        <button class="away">Add Post</button>
+        <button class="away">
+          <a href=""> Log Out </a>
+        </button>
 
         <div class="hamburger">
           <div class="line1"></div>
