--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   <body>
     <nav>
       <div class="container navbar">
-        <h1>Guardians</h1>
+        <h1><a href="index.html">Guardians</a></h1>
 
         <ul class="navlinks">
           <li><a href="profile.html">Profile</a></li>
+          <button><a href="./forms/sign.html">Sign Up</a></button>
+          <button><a href="./forms/log.html">Sign In</a></button>
         </ul>
 
         <button class="away"><a href="./forms/sign.html">Sign Up</a></button>
@@ -98,26 +100,28 @@
             <label for="" style="background-color: rgb(224, 189, 61)"
               >Life</label
             >
-            <h3>
-              5 things that can help you manage your time if you are a
-              busy-person
-            </h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              natus odit cum. Soluta quos voluptates, eos vel quod culpa tempora
-              inventore accusantium consectetur vero nam, et doloribus
-              blanditiis aliquid repellat!
-            </p>
+            <a href="content.html">
+              <h3>
+                5 things that can help you manage your time if you are a
+                busy-person
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+                natus odit cum. Soluta quos voluptates, eos vel quod culpa
+                tempora inventore accusantium consectetur vero nam, et doloribus
+                blanditiis aliquid repellat!
+              </p>
 
-            <div class="by">
-              <a href="profile.html">
-                <img src="images/avatar.jpg" alt="" />
-                <div class="name">
-                  <h4>By: <span>Makinde Sodiq</span></h4>
-                  <i>1 week ago</i>
-                </div>
-              </a>
-            </div>
+              <div class="by">
+                <a href="profile.html">
+                  <img src="images/avatar.jpg" alt="" />
+                  <div class="name">
+                    <h4>By: <span>Makinde Sodiq</span></h4>
+                    <i>1 week ago</i>
+                  </div>
+                </a>
+              </div>
+            </a>
           </div>
         </div>
 
@@ -130,23 +134,25 @@
               style="background-color: rgb(29, 38, 47); color: white"
               >Work</label
             >
-            <h3>10 ways to bid for salary-raise through email</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              natus odit cum. Soluta quos voluptates, eos vel quod culpa tempora
-              inventore accusantium consectetur vero nam, et doloribus
-              blanditiis aliquid repellat!
-            </p>
+            <a href="content.html">
+              <h3>10 ways to bid for salary-raise through email</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+                natus odit cum. Soluta quos voluptates, eos vel quod culpa
+                tempora inventore accusantium consectetur vero nam, et doloribus
+                blanditiis aliquid repellat!
+              </p>
 
-            <div class="by">
-              <a href="profile.html">
-                <img src="images/avatar.jpg" alt="" />
-                <div class="name">
-                  <h4>By: <span>Makinde Sodiq</span></h4>
-                  <i>1 week ago</i>
-                </div>
-              </a>
-            </div>
+              <div class="by">
+                <a href="profile.html">
+                  <img src="images/avatar.jpg" alt="" />
+                  <div class="name">
+                    <h4>By: <span>Makinde Sodiq</span></h4>
+                    <i>1 week ago</i>
+                  </div>
+                </a>
+              </div>
+            </a>
           </div>
         </div>
 
@@ -159,26 +165,40 @@
               style="background-color: rgb(131, 41, 14); color: white"
               >Tech</label
             >
-            <h3>How to become a Full-Stack developer in 8months</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              natus odit cum. Soluta quos voluptates, eos vel quod culpa tempora
-              inventore accusantium consectetur vero nam, et doloribus
-              blanditiis aliquid repellat!
-            </p>
+            <a href="content.html">
+              <h3>How to become a Full-Stack developer in 8months</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+                natus odit cum. Soluta quos voluptates, eos vel quod culpa
+                tempora inventore accusantium consectetur vero nam, et doloribus
+                blanditiis aliquid repellat!
+              </p>
 
-            <div class="by">
-              <a href="profile.html">
-                <img src="images/avatar.jpg" alt="" />
-                <div class="name">
-                  <h4>By: <span>Makinde Sodiq</span></h4>
-                  <i>1 week ago</i>
-                </div>
-              </a>
-            </div>
+              <div class="by">
+                <a href="profile.html">
+                  <img src="images/avatar.jpg" alt="" />
+                  <div class="name">
+                    <h4>By: <span>Makinde Sodiq</span></h4>
+                    <i>1 week ago</i>
+                  </div>
+                </a>
+              </div>
+            </a>
           </div>
         </div>
       </div>
+
+      <div class="pagination">
+        <a href="#">&laquo;</a>
+        <a href="#">1</a>
+        <a class="active" href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+
+        <a href="#">&raquo;</a>
+      </div>
+
       <hr />
     </div>
 
