--- a/profile.html
+++ b/profile.html
@@ -153,6 +153,16 @@
           </div>
         </div>
       </div>
+      <div class="pagination" style="margin-bottom: 30px">
+        <a href="#">&laquo;</a>
+        <a href="#">1</a>
+        <a class="active" href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+
+        <a href="#">&raquo;</a>
+      </div>
     </div>
 
     <footer>
